tests/ui/stability-attribute/removed-library-feature.stderr
error[E0557]: feature has been removed
  --> $DIR/removed-library-feature.rs:4:12
   |
LL | #![feature(unstable_removed)]
   |            ^^^^^^^^^^^^^^^^ feature has been removed
   |
   = note: removed in 1.89.0
   = note: test_reason

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0557`.
