tests/ui/stability-attribute/removed-library-feature.rs
// check-fail
// compile-flags: -Z unstable-options

#![feature(unstable_removed)] //~ ERROR feature has been removed

fn main() {}
